; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Network.c_IsMacAddressLocalFast.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Network.c_IsMacAddressLocalFast.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@local_mac_list_lock = common dso_local global i32 0, align 4
@local_mac_list = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @IsMacAddressLocalFast(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i32 0, i32* %4, align 4
  %5 = load i8*, i8** %3, align 8
  %6 = icmp eq i8* %5, null
  br i1 %6, label %7, label %8

7:                                                ; preds = %1
  store i32 0, i32* %2, align 4
  br label %22

8:                                                ; preds = %1
  %9 = load i32, i32* @local_mac_list_lock, align 4
  %10 = call i32 @Lock(i32 %9)
  %11 = load i32*, i32** @local_mac_list, align 8
  %12 = icmp eq i32* %11, null
  br i1 %12, label %13, label %15

13:                                               ; preds = %8
  %14 = call i32 (...) @RefreshLocalMacAddressList()
  br label %15

15:                                               ; preds = %13, %8
  %16 = load i32*, i32** @local_mac_list, align 8
  %17 = load i8*, i8** %3, align 8
  %18 = call i32 @IsMacAddressLocalInner(i32* %16, i8* %17)
  store i32 %18, i32* %4, align 4
  %19 = load i32, i32* @local_mac_list_lock, align 4
  %20 = call i32 @Unlock(i32 %19)
  %21 = load i32, i32* %4, align 4
  store i32 %21, i32* %2, align 4
  br label %22

22:                                               ; preds = %15, %7
  %23 = load i32, i32* %2, align 4
  ret i32 %23
}

declare dso_local i32 @Lock(i32) #1

declare dso_local i32 @RefreshLocalMacAddressList(...) #1

declare dso_local i32 @IsMacAddressLocalInner(i32*, i8*) #1

declare dso_local i32 @Unlock(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
